basic oauth support with static single tokens. Need to change these to generated tokens that can be revoked
